--- a/DTUPay-server/pom.xml
+++ b/DTUPay-server/pom.xml
@@ -56,6 +56,11 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-core</artifactId>
+      <version>9.0.41</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
